--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <svg viewbox="0 0 1000 400">
-            <text id="mytext" x="50%" y="50%" text-anchor="middle" fill="none">AURA</text>
+            <text id="mytext" x="50%" y="50%" text-anchor="middle" fill="none">Hello !</text>
             <use xlink:href="#mytext" class="copy copy1"></use>
             <use xlink:href="#mytext" class="copy copy2"></use>
             <use xlink:href="#mytext" class="copy copy3"></use>
